chore: Refactor to Plasmo framework and setup pages
- Backup original popup.tsx and options.tsx to backup/
- Create blank pages for next development:
  - popup.tsx: Hot reload test with counter (🟢)
  - options.tsx: Blank settings page (🟡)
  - newtab.tsx: Blank new tab page (🟣)
  - background/index.ts: Blank service worker (🔴)
- Update manifest.json to point to Plasmo generated version
- Remove dev-build symlink (use build/chrome-mv3-dev instead)
- Set popup size to 500px x 400px

Changes:
- Replaced old HTML/JS with React components
- Added page identifiers for debugging
- Added hot reload counter test in popup

--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,1 @@
-{
-  "manifest_version": 3,
-  "name": "Tool for Impersonating Agents",
-  "version": "1.1",
-  "description": "A simple chrome extension for impersonate a agent.",
-  "permissions": ["activeTab", "scripting", "storage", "tabs"],
-  "host_permissions": ["http://*/*", "https://*/*"],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png"
-    }
-  },
-  "options_page": "settings.html"
-}
+chrome-mv3.plasmo.manifest.json
