--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.14.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "daisyui": "^5.5.14",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4"
   },
@@ -28,6 +29,11 @@
       "http://*/*",
       "https://*/*"
     ],
-    "permissions": ["activeTab", "scripting", "storage", "tabs"]
+    "permissions": [
+      "activeTab",
+      "scripting",
+      "storage",
+      "tabs"
+    ]
   }
 }
