--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@types/node": "^20.14.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "daisyui": "^5.5.14",
+    "autoprefixer": "^10.4.23",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.4"
   },
   "manifest": {
