feat: add dual-mode configuration for development and production versions
1. Configure extension naming system:
   - Development: impersonate-agents-dev → "IA - Development" (v1.1.0-dev)
   - Production: impersonate-agents → "IA" (v1.1.0)
   - Different extension IDs allow side-by-side installation

2. Auto-configuration script (scripts/configure-env.cjs):
   - Automatically modifies package.json based on NODE_ENV
   - Creates build/chrome-mv3-dev for development
   - Creates build/chrome-mv3-prod for production
   - Restores original package.json on exit (handled by git)

3. New build commands:
   - npm run dev: Development mode
   - npm run dev:prod: Development mode but production configuration
   - npm run build: Development build
   - npm run build:prod: Production build

4. Updated README.md:
   - Documented development and production workflows
   - Explained side-by-side installation benefits
   - Added scripts reference table
   - Removed outdated "Why not public" section (moved to bottom)

5. Build configuration:
   - Added build/ to .gitignore
   - Build outputs are gitignored as they are regenerated each build

Changes:
- package.json: Updated scripts for dual-mode builds
- scripts/configure-env.cjs: Auto-configuration script for extension naming
- .env.example: Example configuration (now informational)
- README.md: Updated with comprehensive usage instructions
- .gitignore: Added build/ directory

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "impersonate-agents",
-  "displayName": "Tool for Impersonating Agents",
+  "displayName": "IA",
   "version": "1.1.0",
   "description": "A simple chrome extension for impersonate a agent.",
   "type": "module",
   "scripts": {
-    "dev": "plasmo dev",
-    "build": "plasmo build",
+    "predev": "node scripts/configure-env.cjs",
+    "dev": "cross-env NODE_ENV=development plasmo dev",
+    "dev:prod": "node scripts/configure-env.cjs && cross-env NODE_ENV=production plasmo dev",
+    "prebuild": "node scripts/configure-env.cjs",
+    "build": "cross-env NODE_ENV=development node scripts/configure-env.cjs && plasmo build",
+    "build:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo build",
     "package": "plasmo package"
   },
   "dependencies": {
@@ -22,6 +26,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.23",
+    "cross-env": "^10.1.0",
     "daisyui": "^4.12.14",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
