--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "impersonate-agents",
-  "displayName": "IA",
-  "version": "1.1.0",
+  "name": "impersonate-agents-dev",
+  "displayName": "IA - Development",
+  "version": "2.0.0",
   "description": "A simple chrome extension for impersonate a agent.",
   "type": "module",
   "scripts": {
