feat: integrate Convex to display partner names in address view dropdown

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@
 # Current configuration:
 # Development: impersonate-agents-dev | "IA - Development" | 1.1.0-dev
 # Production:  impersonate-agents     | "IA"                | 1.1.0
+
+# Convex Configuration
+# Get your Convex URL from the Convex dashboard
+PLASMO_PUBLIC_CONVEX_URL=https://your-project.convex.cloud
