feat: 添加数据库导出导入功能
- 新增数据导出脚本 (scripts/export-data.cjs)
- 新增数据导入脚本 (scripts/import-data.cjs)
- 新增交互式生产环境导入助手 (scripts/production-import-helper.cjs)
- 添加 npm 命令: db:export, db:import, db:import:prod, db:deploy
- 创建完整的中英文文档和使用指南
- 更新 .gitignore 排除数据库导出文件
- 修复 Convex CLI 导入命令格式问题
- 已成功测试导出导入功能

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "prebuild": "node scripts/configure-env.cjs",
     "build": "cross-env NODE_ENV=development node scripts/configure-env.cjs && plasmo build",
     "build:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "db:export": "node scripts/export-data.cjs",
+    "db:import": "node scripts/import-data.cjs",
+    "db:import:prod": "node scripts/import-data.cjs --prod",
+    "db:deploy": "node scripts/production-import-helper.cjs"
   },
   "dependencies": {
     "@plasmohq/storage": "^1.15.0",
