--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ build/
 
 # Convex generated files
 convex/_generated/
+
+# Database exports (may contain sensitive data)
+*.jsonl
+*.zip
+data-export.jsonl
+data-export.zip
+backup/database/
