refactor: 修复环境配置脚本和环境变量加载
- 移除configure-env.cjs中的强制build命令，让它只负责配置
- 修复pnpm dev错误执行plasmo build的问题
- 添加postbuild hook用于构建后处理
- 优化build和build:prod脚本的执行流程
- 现在pnpm dev正确加载.env.development.local
- pnpm build正确加载.env.production.local (Plasmo默认行为)

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "predev": "node scripts/configure-env.cjs",
     "dev": "cross-env NODE_ENV=development plasmo dev",
-    "dev:prod": "node scripts/configure-env.cjs && cross-env NODE_ENV=production plasmo dev",
+    "dev:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo dev",
     "server": "pnpm convex dev",
-    "prebuild": "node scripts/configure-env.cjs",
     "build": "cross-env NODE_ENV=development node scripts/configure-env.cjs && plasmo build",
-    "build:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo build",
+    "postbuild": "node scripts/postbuild.cjs",
+    "build:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo build && node scripts/postbuild.cjs",
     "package": "plasmo package",
     "db:export": "node scripts/export-data.cjs",
     "db:import": "node scripts/import-data.cjs",
