--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "impersonate-agents-dev",
-  "displayName": "IA - Development",
+  "name": "impersonate-agents",
+  "displayName": "IA",
   "version": "2.0.0",
   "description": "A simple chrome extension for impersonate a agent.",
   "type": "module",
@@ -9,9 +9,8 @@
     "dev": "cross-env NODE_ENV=development plasmo dev",
     "dev:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo dev",
     "server": "pnpm convex dev",
-    "build": "cross-env NODE_ENV=development node scripts/configure-env.cjs && plasmo build",
-    "postbuild": "node scripts/postbuild.cjs",
-    "build:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo build && node scripts/postbuild.cjs",
+    "build": "cross-env NODE_ENV=development node scripts/configure-env.cjs && plasmo build && cross-env NODE_ENV=development node scripts/postbuild.cjs",
+    "build:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo build && cross-env NODE_ENV=production node scripts/postbuild.cjs",
     "package": "plasmo package",
     "db:export": "node scripts/export-data.cjs",
     "db:import": "node scripts/import-data.cjs",
