refactor: 简化构建命令，只保留dev和build
移除的命令:
- dev:prod (不常用)
- build:dev (造成混淆)

保留的命令:
- pnpm dev - 开发环境 (开发服务器 + .env.development.local)
- pnpm build - 生产环境 (构建产物 + .env.production.local)

优点:
- 更简洁直观
- 避免命名混淆
- 符合常见的开发工作流

--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "impersonate-agents-dev",
-  "displayName": "IA - Tools for Development (Dev)",
+  "name": "impersonate-agents",
+  "displayName": "IA - Tools for Development",
   "version": "2.0.0",
   "description": "A simple chrome extension for impersonate a agent.",
   "type": "module",
   "scripts": {
-    "predev": "node scripts/configure-env.cjs",
-    "dev": "cross-env NODE_ENV=development plasmo dev",
-    "dev:prod": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo dev",
+    "predev": "cross-env NODE_ENV=development node scripts/configure-env.cjs",
+    "dev": "plasmo dev",
     "server": "pnpm convex dev",
-    "build:dev": "cross-env NODE_ENV=development node scripts/configure-env.cjs && plasmo build && cross-env NODE_ENV=development node scripts/postbuild.cjs",
     "build": "cross-env NODE_ENV=production node scripts/configure-env.cjs && plasmo build && cross-env NODE_ENV=production node scripts/postbuild.cjs",
     "package": "plasmo package",
     "db:export": "node scripts/export-data.cjs",
